--- a/Jupyter_Notebooks/QPSI_Phase_1/Generating_SorgPop_Figures.ipynb
+++ b/Jupyter_Notebooks/QPSI_Phase_1/Generating_SorgPop_Figures.ipynb
@@ -18,16 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d3533e46",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
-      "  %reload_ext rpy2.ipython\n"
+      "Unable to determine R library path: Command '('C:\\\\Program Files\\\\R\\\\R-4.1.2\\\\bin\\\\Rscript', '-e', 'cat(Sys.getenv(\"LD_LIBRARY_PATH\"))')' returned non-zero exit status 1.\n",
+      "C:\\Users\\mclea\\anaconda3\\envs\\jupyter\\lib\\site-packages\\rpy2\\robjects\\packages.py:366: UserWarning: The symbol 'quartz' is not in this R namespace/package.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "10e4e6fb",
    "metadata": {},
    "outputs": [],
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "233ddf39",
    "metadata": {
     "scrolled": true
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "c339c3a4",
    "metadata": {},
    "outputs": [
@@ -415,23 +416,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "7d5219ae",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "not working\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
-      "C:\\Users\\mclea\\OneDrive\\Brookhaven\\AWS\\Jupyter_Notebooks\\QPSI\\BioinformaticsLibrary.py:462: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\mclea\\OneDrive\\Brookhaven\\AWS\\Jupyter_Notebooks\\QPSI_Phase_1\\BioinformaticsLibrary.py:461: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  plt.setp(ax, yticklabels=sort_list)\n"
      ]
     },
@@ -519,23 +513,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "74562252",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "not working\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
-      "C:\\Users\\mclea\\OneDrive\\Brookhaven\\AWS\\Jupyter_Notebooks\\QPSI\\BioinformaticsLibrary.py:462: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\mclea\\OneDrive\\Brookhaven\\AWS\\Jupyter_Notebooks\\QPSI_Phase_1\\BioinformaticsLibrary.py:461: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  plt.setp(ax, yticklabels=sort_list)\n"
      ]
     },
